--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/api"],
-            "styles": [
-              "src/styles.scss",
-              "node_modules/bulma/css/bulma.min.css"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": [],
             "es5BrowserSupport": true
           },
